ADD - adicinei imagens do Homem aranha

--- a/intex.html
+++ b/intex.html
@@ -4,15 +4,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>site do miranha</title>
 </head>
+<style>
+    #foto-miranha{
+       height: 300px;
+         width: 200px;
+    }
+</style>
 <body>
+
    <header>
       <h1>Site do miranha</h1>
     </header> 
+
     <main>
+
+        <div>
+        <img src="assets/miranha2.jpg" alt="Imagem do Homem Aranha">
+        </div>
+
+        <div>
         <p>Miranha é o amigo da vizinhança</p>
+        <h2>A aranha mais forte</h2>
+        </div>
+
     </main>
+
     <footer>
         <p>Todos os direitos reservados para Thiago Henrique Novaes Berti</p>
     </footer>
+
 </body>
 </html>
