ADD - adicionei um plano de fundo e removi uma imagem

--- a/intex.html
+++ b/intex.html
@@ -4,30 +4,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>site do miranha</title>
 </head>
+
+
 <style>
+
+    h1{
+        color: rgb(255, 0, 0);
+    }
+
+    body{
+        background-color: rgb(29, 29, 29);
+        background-image: url(assets/fundo4.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        color: white;
+    }
     #foto-miranha{
        height: 300px;
          width: 200px;
     }
-</style>
-<body>
+    .foto-miranha{
+        height: 100px;
+        width: 200px;
+        border-style: solid;
+        border-color: white;
+    }
 
+        p{
+            color: rgb(255, 53, 53);  
+    }
+    footer P{
+        color: rgb(255, 51, 51);
+    }
+    
+</style>
+   
+<body>
    <header>
       <h1>Site do miranha</h1>
     </header> 
 
+
     <main>
-
+        
         <div>
-        <img src="assets/miranha2.jpg" alt="Imagem do Homem Aranha">
+            <img class="foto-miranha" src="assets/miranha5.png" alt="Imagem do Homem Aranha 4">
+            <img class="foto-miranha" src="assets/images3.jfif" alt="Imagem do Homem Aranha 3">
+            <img class="foto-miranha" src="assets/images2.jfif" alt="Imagem do Homem Aranha 2">
         </div>
-
         <div>
         <p>Miranha é o amigo da vizinhança</p>
         <h2>A aranha mais forte</h2>
         </div>
-
     </main>
+
 
     <footer>
         <p>Todos os direitos reservados para Thiago Henrique Novaes Berti</p>
