ADD - Primeira parte sobre noticias adicionada

--- a/intex.html
+++ b/intex.html
@@ -11,6 +11,9 @@
     h1{
         color: rgb(255, 0, 0);
     }
+    h2{
+        color: rgb(255, 0, 0);
+    }
 
     body{
         background-color: rgb(29, 29, 29);
@@ -27,14 +30,14 @@
         height: 100px;
         width: 200px;
         border-style: solid;
-        border-color: white;
+        border-color: rgb(255, 255, 255);
     }
 
         p{
-            color: rgb(255, 53, 53);  
+            color: rgb(255, 255, 255);  
     }
     footer P{
-        color: rgb(255, 51, 51);
+        color: rgb(255, 0, 0);
     }
     
 </style>
@@ -54,8 +57,22 @@
         </div>
         <div>
         <p>Miranha é o amigo da vizinhança</p>
-        <h2>A aranha mais forte</h2>
         </div>
+        <h2>Ultimas Notícias</h2>
+        <div>
+        <h2>Homem-Aranha derrota criminosos e impede roubo em joalheria.</h2>
+        </div>
+<p>O Homem-Aranha derrotou criminosos e impediu um roubo em uma joalheria da cidade. A rápida ação do herói garantiu a segurança dos clientes e evitou maiores prejuízos.</p>
+        </div>
+        <div>18/02/2026</div>
+<div>
+         <h2>Homem-Aranha salva cidadãos de incêndio em casa abandonada.
+</h2>
+        </div>
+<p>O Homem-Aranha resgatou cidadãos presos em um incêndio em uma casa abandonada. Graças à sua coragem e agilidade, ninguém ficou ferido.</p>
+        </div>
+        <div>17/02/2026</div>
+   <a href="Leia Mais">Leia Mais</a>
     </main>
 
 
