ADD - ultimas atualizações feitas

--- a/intex.html
+++ b/intex.html
@@ -7,7 +7,9 @@
 
 
 <style>
-
+    a{
+        color: rgb(98, 161, 255);
+    }
     h1{
         color: rgb(255, 0, 0);
     }
@@ -17,7 +19,7 @@
 
     body{
         background-color: rgb(29, 29, 29);
-        background-image: url(assets/fundo4.png);
+        background-image: url(assets/fundotg.png);
         background-repeat: no-repeat;
         background-size: cover;
         color: white;
@@ -63,6 +65,7 @@
         <h2>Homem-Aranha derrota criminosos e impede roubo em joalheria.</h2>
         </div>
 <p>O Homem-Aranha derrotou criminosos e impediu um roubo em uma joalheria da cidade. A rápida ação do herói garantiu a segurança dos clientes e evitou maiores prejuízos.</p>
+<a href="Leia Mais">Leia Mais</a>
         </div>
         <div>18/02/2026</div>
 <div>
@@ -70,9 +73,28 @@
 </h2>
         </div>
 <p>O Homem-Aranha resgatou cidadãos presos em um incêndio em uma casa abandonada. Graças à sua coragem e agilidade, ninguém ficou ferido.</p>
+<a href="Leia Mais">Leia Mais</a>
         </div>
         <div>17/02/2026</div>
-   <a href="Leia Mais">Leia Mais</a>
+
+        <div>
+         <h2>Homem-Aranha se machuca gravemente em combate contra o simbionte Venom.
+</h2>
+        </div>
+<p>O Homem-Aranha ficou gravemente ferido após um intenso combate contra o simbionte Venom. A batalha foi marcada por grande destruição e colocou à prova a resistência do herói.</p>
+<a href="Leia Mais">Leia Mais</a>
+        </div>
+        <div>16/02/2026</div>
+
+<div>
+         <h2>Repórter afirma ter descoberto a identidade do Homem-Aranha.
+</h2>
+        </div>
+<p>Um repórter afirmou ter descoberto a verdadeira identidade do Homem-Aranha, causando grande repercussão na cidade. A revelação pode colocar em risco a vida pessoal do herói e de seus entes queridos.</p>
+<a href="Leia Mais">Leia Mais</a>
+        </div>
+        <div>15/02/2026</div>
+
     </main>
 
 
